--- a/Project/src/main/webapp/mainpage/main.css
+++ b/Project/src/main/webapp/mainpage/main.css
@@ -54,7 +54,7 @@ nav {
   top: 3vh;
   width: 100vw;
   height: 10vh;
-  background-color: #6E8A93;
+  background-color: #81d4fa;
   position: absolute;
 }
 
@@ -63,7 +63,7 @@ a {
   float: right;
   text-decoration: none;
   padding: 30px 20px;
-  font-size: 22px;
+  font-size: 26px;
 }
 
 h1 {
