--- a/Project/src/main/webapp/login/login.css
+++ b/Project/src/main/webapp/login/login.css
@@ -56,6 +56,17 @@ span {
   font-size: 100px;
 }
 
+#type {
+	width:250px;
+	height:30px;
+	font-family: sans-serif;
+	border-top: none;
+  border-right: none;
+  border-left: none;
+  border-bottom: 2px solid black;
+	text-decoration: none;
+	outline:none;
+}
 
 .container {
   top: 15%;
@@ -78,7 +89,7 @@ input {
   border-bottom: 2px solid black;
 }
 
-input:focus {
+input:focus,select:focus {
       outline: none;
       border-bottom: 2px solid #81d4fa;
 }
